# kubelingo

./: .commitlintrc.yaml  .coverage  .gitignore  .gitscaffold.toml  .pre-commit-config.yaml  Cargo.toml  DESIGN.md  Directory Structure  LICENSE  MANIFEST.in  README.md  Run the following command instead  backend_integrator.py  ckad_quiz_data.json  ckad_quiz_data_combined.json  ckad_quiz_data_with_detailed_explanations.json  ckad_quiz_data_with_explanations.json  ckad_study.py  cli.py  cli_quiz.py  issue-review-flagged.md  k8s_manifest_generator.py  killercoda-ckad_072425.csv  killercoda-ckad_072425.numbers  kubectl_quiz.py  kubelingo.py  kubelingo_demo.cast  merge_quiz_data.py  openai.py  pyproject.toml  pytest.ini  question_generator.py  quiz_log.txt  requirements.md  requirements.txt  script.vim  setup.py  shared-context_081325.md  shared_context.md  shared_context_081325.md  (+4 more)
.kubelingo/: 20250811_132741_264857.db  20250811_133104_994666.db  20250811_164143_130708.db  20250811_235550_639265.db  20250812_091456_113974.db  20250812_091456_119071.db  20250812_091456_153629.db  20250812_091456_160363.db  kubelingo.db  kubelingo.db-journal  kubelingo.db.bak-20250813_150831  kubelingo_db_20250812_092509.db  quiz_dump_20250812_140133.sql
backups/: index.yaml  sqlite_index.yaml
data/: ckad_quiz_data.json  url_list.md  vim_quiz_data.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  Instruct_081325.rtf  ai-integration-roadmap.md  bug_tickets.yaml  design_spec.md  gemini_api_examples.md  general_instructions.md  killercoda_ckad_cheat_sheet.md  maintenance_scripts.md  menu_schema.md  perplexity_api_examples.md  question-schema.md  question_generation_tools.md  roadmap-structured.md  roadmap.md  roadmap_plan.md  search.md  shared_context.md  subjects.md  troubleshooting_scripts.md  usage.md  vim.md  vim_integration_analysis.md
kubelingo/: __init__.py  __main__.py  backend_integrator.py  bootstrap.py  bootstrapper.py  bridge.py  cli.py  config.py  constants.py  database.py  grader.py  importer.py  install.py  issue_manager.py  k8s_manifest_generator.py  kubelingo.py  kubelingo.py.bak  llm_utils.py  performance_tracker.py  question.py  question_generator.py  question_manager.py  question_search.py  sandbox.py  self_healing.py  source_manager.py  study_session.py  tools.py  utils.py  validation.py
misc/: .coverage  README.md  consolidated_20250811_144940.yaml  design_spec.md  pyproject.toml
misc/.github/workflows/: ci.yml  gemini-issue-automated-triage.yml  lint-commits.yml
misc/agent/: heal.py  monitor.py  self_healing.py
misc/docs/: openrouter_api_calls.md
misc/legacy/: requirements.txt
misc/legacy/docs/: consolidated_docs.md
misc/legacy/kubelingo/: kubelingo.py
misc/legacy/scripts/: install_krew_and_validate.sh
misc/legacy/scripts/k8s-grader_090225/: k8s_grader.py
misc/legacy/scripts/k8s-qgen_090125/: k8s_quesion_generator.py
misc/legacy/scripts/qgen+grader_090125/: implementation_guide.md  kubernetes_grader.py
misc/legacy/tests/: test_generation_grader.py
misc/scripts/: bug_ticket.py  demo_openrouter.py  kubelingo_tools.py  question_manager.py  run_gemini_trivia.sh
misc/scripts/shell/: restore_all.sh
misc/tests/: test_cli_fallback.py  test_cli_main.py  test_cli_menu.py  test_cli_print_menus.py  test_cli_wrapper.py  test_perplexity.py  test_post_answer_menu.py  test_post_answer_menu_updated.py  test_question_details.py  test_question_generator_topics.py  test_two_step_question_mode.py
question-data-backup/: kubelingo.db  kubelingo.db.bak
src/: cli.rs  (+2 more)
(+1049 files in other folders)
