[package]
name = "kubelingo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[lib]
name = "kubelingo_core"
crate-type = ["cdylib"]

[[bin]]
name = "kubelingo"
path = "src/main.rs"
