[package]
name = "kubelingo"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "kubelingo"
path = "src/main.rs"
