[package]
name = "kubelingo"
version = "0.1.12"
description = "CLI quizzes for kubectl commands and Kubernetes YAML editing"
license = "MIT"
homepage = "https://github.com/josephedward/kubelingo"
repository = "https://github.com/josephedward/kubelingo.git"
edition = "2021"
build = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.24.1", features = ["extension-module"] }
portable-pty = "0.8"
anyhow = "1.0"
tempfile = "3.20.0"

[build-dependencies]
pyo3-build-config = { version = "0.24.1", features = ["resolve-config"] }

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "kubelingo"
path = "src/main.rs"
