[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kubelingo"
version = "0.1.0"
description = "A CLI quiz tool for mastering kubectl commands, Kubernetes YAML editing, and cloud-backed EKS exercises."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.4",
    "questionary>=1.10.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "boto3>=1.26.0",
    "kubernetes>=25.0.0",
]

[project.scripts]
kubelingo = "kubelingo.cli:main"
