[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubelingo"
version = "0.3.0"
description = "Kubernetes exam study tool, powered by AI"
readme = "README.md"
authors = [
    { name = "Edward Joseph", email = "aptnative@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "rich",
    "InquirerPy",
    "google-generativeai",
    "openai",
    "python-dotenv",
    "thefuzz",
    "pygments",
    "click",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/josephedward/kubelingo"

[project.scripts]
kubelingo = "cli:main"

[tool.pytest.ini_options]
markers = [
    "network: marks tests that require a network connection",
    "e2e: marks end-to-end tests that require a full installation",
]
addopts = "-m 'not network'"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
